# quicsim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
config/: simulation.yaml
schemas/: simulation_protocol.fbs
src/: main.cpp
src/common/: network.cpp  network.hpp  shared_memory.hpp
src/quicclient/: client.cpp  client.hpp  main.cpp
src/quicserver/: main.cpp  server.cpp  server.hpp
